@@ -15,10 +15,9 @@ package com.longevitysoft.android.xml.plist.domain;
 /**
  * Represents a simple plist real element.
  */
-public class Real extends PListObject implements IPListSimpleObject<Float> {
+public class Real extends PListObject implements IPListSimpleObject<Double> {
 
-	// TODO: Double?
-	protected Float real;
+	protected Double real;
 
 	/**
 	 * 
@@ -36,7 +35,7 @@ public class Real extends PListObject implements IPListSimpleObject<Float> {
 	 * com.longevitysoft.android.xml.plist.domain.IPListSimpleObject#getValue()
 	 */
 	@Override
-	public Float getValue() {
+	public Double getValue() {
 		return real;
 	}
 
@@ -48,7 +47,7 @@ public class Real extends PListObject implements IPListSimpleObject<Float> {
 	 * (java.lang.Object)
 	 */
 	@Override
-	public void setValue(Float val) {
+	public void setValue(Double val) {
 		this.real = val;
 	}
 
@@ -61,6 +60,6 @@ public class Real extends PListObject implements IPListSimpleObject<Float> {
 	 */
 	@Override
 	public void setValue(java.lang.String val) {
-		this.real = new Float(Float.parseFloat(val.trim()));
+		this.real = Double.valueOf(val);
 	}
 }
